syntax = "proto3";

package driverPackage;

service DriverService {
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Test (TestRequest) returns (TestResponse);
}

// dummy data to run the service
message PingRequest {}

message PingResponse {
  string message = 1;
}

message TestRequest {}

message TestResponse {
  string message = 1;
}
